2008-03-08  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* src/murrine_style.c: (murrine_style_init_from_rc):
	listviewheaderstyle = 1 for the CLEARLOOKS profile

2008-03-08  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* src/murrine_draw.c: (murrine_draw_scrollbar_stepper):
	* src/murrine_draw_rgba.c: (murrine_rgba_draw_scrollbar_stepper):
	Fixed lightborder in scrollbar stepper

2008-03-07  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* src/murrine_draw.c: (murrine_draw_radiobutton),
	(murrine_draw_checkbox):
	* src/murrine_draw_rgba.c: (murrine_rgba_draw_radiobutton),
	(murrine_rgba_draw_checkbox):
	* src/murrine_style.c: (murrine_style_draw_option),
	(murrine_style_draw_check):
	* src/murrine_types.h:
	Implemented inconsistent state for radiobutton

2008-03-07  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* configure.ac:
	* src/config.h.in:
	* src/murrine_style.c: (murrine_widget_is_rgba),
	(murrine_style_draw_box):
	Added --disable-rgba at the configure,
	renamed --enable-animationtoleft to --enable-animationrtl

2008-02-29  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* src/murrine_style.c: (murrine_style_draw_box):
	Fixed this bug:
	https://bugs.launchpad.net/ubuntu/+source/gtk2-engines-murrine/+bug/195929

2008-02-27  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* src/murrine_draw.c: (murrine_draw_button):
	* src/murrine_draw_rgba.c: (murrine_rgba_draw_button):
	That was part of the last commit :)

2008-02-27  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* src/murrine_style.c: (murrine_style_draw_box):
	Fixed menubaritems with menubaritemstyle = 1.
	Bye bye Murrine, see you in April :)

2008-02-27  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* src/murrine_draw.c: (murrine_draw_button):
	* src/murrine_draw_rgba.c: (murrine_rgba_draw_button):
	* src/murrine_style.c: (murrine_style_init_from_rc),
	(murrine_style_realize):
	Fixed contrast and inset on RGBA active buttons

2008-02-27  Andrea Cimitan  <andrea.cimitan@gmail.com>
